infra/manifests/ring-mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ring-mqtt
  namespace: ring-mqtt
  labels:
    app: ring-mqtt
spec:
  selector:
    app: ring-mqtt
  ports:
    - port: 55123
      targetPort: 55123
      protocol: TCP
      name: web-ui
    - port: 8554
      targetPort: 8554
      protocol: TCP
      name: rtsp
  type: ClusterIP
