infra/manifests/ring-mqtt/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ring-mqtt
  namespace: ring-mqtt
spec:
  hostnames:
    - ring.brandwhisper.cloud
  parentRefs:
    - name: gateway
      namespace: istio-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ring-mqtt
          port: 55123
